css/posts/2016/10/22/style.css
/* TODO(alockwood): figure out why compass/css3 is apparently not found?
@import "compass/css3"; */

.svgDemoContainer {
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  padding: 16px;
}

.svgDemoGraphic {
  width: 240px;
  height: 240px;
}

.svgTrimPathDemoGraphic {
  width: 300px;
  height: 300px;
}

.svgTransformPathsDemoList {
  margin-top: 16px;
  list-style: none;
  padding-left: 0;
}

.svgBasicDemoPathInstructionList {
  margin-top: 16px;
}

.svgBasicDemoPathInstruction {
  margin: 0px;
}

.flex-container {
  padding: 0;
  margin: 0;
  list-style: none;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-flow: row wrap;
  justify-content: space-around;
}

.flex-item {
  padding: 5px;
  margin-top: 10px;
}

.svgDemoCheckboxContainer {
  padding: 16px;
}


/* Linear progress bar demo. */

#progressBarContainer {
  padding: 16px;
}

#progressBar {
  width: 360px;
  height: 4px;
  overflow: hidden;
  position: relative;
  background-color: rgba(96, 144, 0, 0.3);
}

#progressBarInnerRect1,
#progressBarInnerRect2 {
  background: #690;
}

#progressBarOuterRect1,
#progressBarOuterRect2,
#progressBarInnerRect1,
#progressBarInnerRect2 {
  height: 4px;
  position: absolute;
  width: 288px;
}


/* Trim path interactive demo. */

#ic_line_path {
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.sliderContainer {
  padding: 16px;
}

.slider {
  margin-top: 8px;
  display: inline-block;
}

.sliderInput {
  width: 300px;
}

.sliderTextContainer {
  margin-top: 8px;
  margin-bottom: 8px;
  display: block;
}

.sliderText {
  display: inline-block;
}


/* Basic properties demo. */

.basic_path_property_play_inactive {
  -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -moz-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -o-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -ms-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  fill: #FF9800;
}

.basic_path_property_play_active {
  -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -moz-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -o-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -ms-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  fill: #4285F4;
}

.basic_path_property_pause_inactive {
  -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -moz-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -o-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -ms-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  stroke-width: 40;
  stroke: #0F9D58;
  fill: none;
}

.basic_path_property_pause_active {
  -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -moz-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -o-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -ms-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  stroke-width: 20;
  stroke: #0F9D58;
  fill: none;
}

.basic_path_property_record_inactive {
  -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -moz-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -o-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -ms-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  fill: #DB4437;
  fill-opacity: 1;
}

.basic_path_property_record_active {
  -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -moz-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -o-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  -ms-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1.0);
  fill: #DB4437;
  fill-opacity: 0.5;
}

.basic_path_property_xy_point {
  fill: #000;
}

.delightIconFillPath {
  fill: #000;
}

.delightIconStrokePath {
  fill: none;
  stroke: #000;
}

.delightIconHighlightPath {
  fill: none;
  stroke: #c00;
  visibility: hidden;
}

.delightIconSearchToBackStrokePath {
  fill: none;
  stroke: #000;
  stroke-width: 2;
}

.delightIconSearchToBackStrokePathDebug {
  fill: none;
  stroke: #000;
  stroke-width: 2;
  stroke-opacity: 0.3;
  visibility: hidden;
}

.delightIconHandwritingStrokePath {
  fill: none;
  stroke: #5C6BC0;
  stroke-width: 3;
  stroke-linejoin: round;
  stroke-linecap: round;
}

.delightIconHandwritingStrokePathDebug {
  fill: none;
  stroke: #000;
  stroke-width: 3;
  stroke-linejoin: round;
  stroke-linecap: round;
  stroke-opacity: 0.3;
  visibility: hidden;
}

.delightIconFingerPrintStrokePath {
  fill: none;
  stroke: #000;
  stroke-linecap: round;
  stroke-width: 1.45;
}

.delightIconFingerPrintStrokePathDebug {
  fill: none;
  stroke: #000;
  stroke-linecap: round;
  stroke-width: 1.45;
  stroke-opacity: 0.3;
  visibility: hidden;
}

.delightIconIo16StrokePath {
  fill: none;
  stroke-width: 5;
}

